--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,22 +11,24 @@ header {
   padding: 20px 30px;
   transition: all ease 0.5s;
 }
-.bg {
+.Background {
   background-color: #121212;
   box-shadow: 0 -5px 45px 25px #121212;
 }
 
-.header--logo img {
-  height: 28px;
-}
-.header--logo {
+.header_logo {
   height: 100%;
+
+  img {
+    height: 28px;
+  }
 }
 
-.header--user img {
-  height: 35px;
-  border-radius: 3px;
-}
-.header--user {
+.header_user {
   height: 100%;
+  
+  img {
+    height: 35px;
+    border-radius: 3px;
+  }
 }
